--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "angular-moment": "^1.1.0",
+    "animate.css": "^3.5.2",
     "moment": "^2.19.2",
     "moment-timezone": "^0.5.14"
   }
