--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
+    "angular-async-validation": "0.0.4",
     "angular-moment": "^1.1.0",
     "animate.css": "^3.5.2",
     "moment": "^2.19.2",
