--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/css/animate.css": "/css/animate.css",
+    "/js/angular-async-validation.js": "/js/angular-async-validation.js",
     "/js/moment-timezone-with-data-2012-2022.min.js": "/js/moment-timezone-with-data-2012-2022.min.js",
     "/js/angular-moment.js": "/js/angular-moment.js",
     "/js/moment.js": "/js/moment.js"
