--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-async-validation": "0.0.4",
     "angular-moment": "^1.1.0",
     "animate.css": "^3.5.2",
+    "masonry-layout": "^4.2.1",
     "moment": "^2.19.2",
     "moment-timezone": "^0.5.14"
   }
