--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,5 +5,6 @@
     "/js/angular-async-validation.js": "/js/angular-async-validation.js",
     "/js/moment-timezone-with-data-2012-2022.min.js": "/js/moment-timezone-with-data-2012-2022.min.js",
     "/js/angular-moment.js": "/js/angular-moment.js",
+    "/js/masonry.pkgd.min.js": "/js/masonry.pkgd.min.js",
     "/js/moment.js": "/js/moment.js"
 }
