--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/css/animate.css": "/css/animate.css",
-    "/js/angular-async-validation.js": "/js/angular-async-validation.js",
-    "/js/moment-timezone-with-data-2012-2022.min.js": "/js/moment-timezone-with-data-2012-2022.min.js",
-    "/js/angular-moment.js": "/js/angular-moment.js",
-    "/js/masonry.pkgd.min.js": "/js/masonry.pkgd.min.js",
-    "/js/moment.js": "/js/moment.js"
+    "/css/app.css": "/css/app.css"
 }
